# advent-of-code

./: 11  Cargo.toml  README.md
2024/rust/: Cargo.toml  README.md
2024/rust/src/: 01.rs  11.rs  13.rs  14.rs  14a.rs  15a.rs  16.rs  17.rs  18.rs  19.rs  19a.rs  20a.rs  21.rs  21a.rs  21notes.txt  22.rs  25.rs
2024/typescript/: 01.mts  01a.mts  02.mts  02a.mts  03.mts  03a.mts  04.mts  04a.mts  05.mts  05a.mts  06.mts  06a.mts  06b.mts  07.mts  08.mts  09.mts  09a.mts  09b.mts  10.mts  11.mts  17.mts  package-lock.json  package.json
src/: 11  12.rs  15.rs  16a.rs  17a.rs  17b.rs  19anotes.txt  20.rs  21a.rs  21notes.txt  23.rs  23a.rs  24.rs  24a.rs  24notes.txt
